Fixed css class name for icon wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1105,6 +1105,6 @@ section {
   }
 }
 
-.devicon-cplusplus-plain {
+.icon-wrap {
   font-size: 40px;
 }
